<resources>
    <string name="app_name">RtkFullFactoryMenu</string>
    <string name="str_success">Success</string>
    <string name="import_reset">Success!Will reboot soon….</string>
    <string name="str_fail">Fail</string>
    <string name="str_on">On</string>
    <string name="str_off">Off</string>
    <string name="str_ok">OK</string>
    <string name="str_ng">NG</string>
    <string name="str_failed">Failed!</string>
    <string name="str_cannot_find">Cannot find USB storage!</string>
    <string name="str_wait">Processing, please wait…</string>
    <string name="illegal_operation">illegal operation</string>
    <string name="inputsource">Source</string>
    <string name="inputsource_atv">ATV</string>
    <string name="inputsource_dtv">DTV</string>
    <string name="inputsource_dvbt">DVBT</string>
    <string name="inputsource_dvbc">DVBC</string>
    <string name="inputsource_dtmb">DTMB</string>
    <string name="inputsource_atsc">TV</string>
    <string name="inputsource_dvbs">DVBS</string>
    <string name="inputsource_isdb">TV</string>
    <string name="str_picture">Display</string>
    <string name="str_sound">Sound Setting</string>
    <string name="str_panel">Panel Name</string>
    <string name="str_user">User</string>
    <string name="str_others">Others</string>
    <string name="str_reset">Factory Reset</string>
    <string name="str_Android_reset">Android Reset</string>
    <string name="str_system_info">System Info</string>
	<string name="str_CustomerPowerOnMode">CustomerPowerOnMode</string>
    <string name="str_picture_mode">Picture Mode</string>
    <string name="picture_mode_standard">Standard</string>
    <string name="picture_mode_dynamic">Dynamic</string>
    <string name="picture_mode_personal">Personal</string>
    <string name="picture_mode_movie">Movie</string>
    <string name="picture_mode_std">STD</string>
    <string name="picture_mode_gentle">Gentle</string>
    <string name="picture_mode_sport">Sport</string>
    <string name="picture_mode_game">Game</string>
    <string name="picture_mode_eye_comfort">Eye Comfort</string>
    <string name="picture_mode_vivid">Vivid</string>
    <string name="picture_mode_mild">Mild</string>
    <string name="picture_mode_eco">ECO</string>
    <string name="picture_mode_pc">PC</string>
    <string name="picture_mode_cricket">CRICKET</string>
    <string name="picture_mode_pq">PQ ADVANCED</string>
    <string name="picture_mode_pq_md5">PQ MD5</string>
    <string name="picture_mode_pq_hdr_md5">PQ_HDR MD5</string>
    <string name="picture_mode_pq_osd_md5">PQ_OSD MD5</string>
    <string name="picture_mode_dv_md5">DV MD5</string>
    <string name="picture_mode_brightness">Brightness</string>
    <string name="picture_mode_contrast">Contrast</string>
    <string name="picture_mode_color">Color</string>
    <string name="picture_mode_sharpness">Sharpness</string>
    <string name="picture_mode_hue">Tint</string>
    <string name="picture_mode_backlight">Backlight</string>
    <string name="picture_mode_pic_backlight">Pic Backlight</string>
    <string name="picture_mode_backlight_mode">Backlight Mode</string>
    <string name="picture_mode_backlight_0">0</string>
    <string name="picture_mode_backlight_50">50</string>
    <string name="picture_mode_backlight_100">100</string>
    <string name="picture_mode_dream_time">Dream Time</string>
    <string name="str_non_linear">Non-linear</string>
    <string name="str_curve_type">Curve Type</string>
    <string name="curve_type_volume">Volume</string>
    <string name="curve_type_brightness">Brightness</string>
    <string name="curve_type_contrast">Contrast</string>
    <string name="curve_type_color">Color</string>
    <string name="curve_type_sharpness">Sharpness</string>
    <string name="curve_type_hue">Tint</string>
    <string name="curve_type_backlight">Backlight</string>
    <string name="str_osd_0">OSD_0</string>
    <string name="str_osd_25">OSD_25</string>
    <string name="str_osd_50">OSD_50</string>
    <string name="str_osd_75">OSD_75</string>
    <string name="str_osd_100">OSD_100</string>
    <string name="str_adc_adjust">ADC Adjust</string>
    <string name="str_adc_source_vga">VGA</string>
    <string name="str_adc_source_ypbpr1_sd">YPbPr1(SD)</string>
    <string name="str_adc_source_ypbpr1_hd">YPbPr1(HD)</string>
    <string name="str_adc_source_scart">Scart</string>
    <string name="str_adc_source_ypbpr2_sd">YPbPr2(SD)</string>
    <string name="str_adc_source_ypbpr2_hd">YPbPr2(HD)</string>
    <string name="str_adc_source_ypbpr3_sd">YPbPr3(SD)</string>
    <string name="str_adc_source_ypbpr3_hd">YPbPr3(HD)</string>
    <string name="str_r_gain">R Gain</string>
    <string name="str_g_gain">G Gain</string>
    <string name="str_b_gain">B Gain</string>
    <string name="str_r_offset">R Offset</string>
    <string name="str_g_offset">G Offset</string>
    <string name="str_b_offset">B Offset</string>
    <string name="str_phase">Phase</string>
    <string name="str_auto_tune">Auto Tune</string>
    <string name="str_white_balance">White Balance</string>
    <string name="str_color_temp">Color Temp</string>
    <string name="str_color_temp_standard">Standard</string>
    <string name="str_color_temp_cool">Cool</string>
    <string name="str_color_temp_warm">Warm</string>
    <string name="str_color_temp_user">User</string>
    <string name="str_color_temp_warmer">Warmer</string>
    <string name="str_color_temp_cooler">Cooler</string>
    <string name="str_color_temp_copytosource">Copy Data To All Source</string>
    <string name="str_over_scan">Over Scan</string>
    <string name="str_test_pattern">Test Pattern</string>
    <string name="str_sound_mode">Sound Mode</string>
    <string name="str_sound_adjust">Sound Adjust</string>
    <string name="str_black">Black</string>
    <string name="str_white">White</string>
    <string name="str_red">Red</string>
    <string name="str_green">Green</string>
    <string name="str_blue">Blue</string>
    <string name="str_volume_curve">VolumeCurve</string>
    <string name="str_power_mode">PowerOnMode</string>
    <string name="power_secondary">Secondary</string>
    <string name="power_memory">Memory</string>
    <string name="power_direct">Direct</string>
    <string name="str_display_logo">Display Logo</string>
    <string name="str_AgingMode">AgingMode</string>
    <string name="str_factory_test">Factory Test</string>
    <string name="str_project_id">Project ID</string>
    <string name="str_pvr_enable">PVR Enable</string>
    <string name="str_uart_enable">Uart Enable</string>
    <string name="str_uart_cmd_enable">Command Enable</string>
    <string name="str_mmode">M Mode</string>
    <string name="str_remote_control_enable">Factory Remote Control Enable</string>
    <string name="str_teletext_enable">Teletext Enable</string>
    <string name="dbx_command_mode">Dbx Command</string>
    <string name="str_total_time">TotalRunTime</string>
    <string name="str_wifi_list">Wifi List</string>
    <string name="str_bluetooth_list">Bluetooth List</string>
    <string name="str_dashboard">Factory Test Dashboard</string>
    <string name="factory_program_reset">Factory Program Reset</string>
    <string name="enter_customer_factory_mode">Enter customer factory mode</string>
    <string name="export_preset_file_to_usb">Export DVBS Preset File to USB</string>
    <string name="preScale">PreScale</string>
    <string name="volume_0">Volume 0</string>
    <string name="volume_10">Volume 10</string>
    <string name="volume_20">Volume 20</string>
    <string name="volume_30">Volume 30</string>
    <string name="volume_40">Volume 40</string>
    <string name="volume_50">Volume 50</string>
    <string name="volume_60">Volume 60</string>
    <string name="volume_70">Volume 70</string>
    <string name="volume_80">Volume 80</string>
    <string name="volume_90">Volume 90</string>
    <string name="volume_100">Volume 100</string>
    <string name="volume_source">Source</string>
    <string name="source_atv">ATV</string>
    <string name="source_dtv">DTV</string>
    <string name="source_av">AV</string>
    <string name="source_ypbpr">YPbPr</string>
    <string name="source_vga">VGA</string>
    <string name="source_hdmi">HDMI</string>
    <string name="str_log_tool">Log Tool</string>
    <string name="str_log_Options">Logcat Mode</string>
    <string name="str_logcat">Logcat</string>
    <string name="str_kernel">Kernel</string>
    <string name="str_log_on_off">Logcat Enable</string>
    <string name="str_logcat_kernel">Kernel+Logcat</string>
    <string name="str_recovery">Recovery</string>
    <string name="str_anr">ANR</string>
    <string name="str_tombstone">Tombstone</string>
    <string name="str_all">All</string>
    <string name="str_reboot">Reboot</string>
    <string name="item_check_network">Network</string>
    <string name="item_all_key_upgrade">All Key Upgrade</string>
    <string name="item_pq_upgrade">PQ Upgrade</string>
    <string name="item_upgrade_bootlogo">Boot Logo Upgrade</string>
    <string name="item_hdcp_upgrade">HDCP1X KEY Upgrade</string>
    <string name="item_mac_upgrade_manual">Set MAC</string>
    <string name="item_mac_upgrade">USB Update MAC</string>
    <string name="item_widevine_upgrade">Widevine KEY Upgrade</string>
    <string name="item_ci_key_upgrade">CIPlus KEY Upgrade</string>
    <string name="item_attestation_key_upgrade">ATT Key Upgrade</string>
    <string name="item_netflix_esn_upgrade">MGKID KEY Upgrade</string>
    <string name="item_rmca_upgrade">RMCA KEY Upgrade</string>
    <string name="item_oem_upgrade">OEM KEY Upgrade</string>
    <string name="item_playready_upgrade">Play Ready KEY Upgrade</string>
    <string name="info_wideVine_display">WideVine key</string>
    <string name="info_playready_display">Playready key</string>
    <string name="item_aq_upgrade">AQ Update</string>
    <string name="item_paneldata_upgrade">Panel Data update</string>
    <string name="item_customer_upgrade">Customer Update</string>
    <string name="str_panel_info">PANEL</string>
    <string name="str_ip_info">IP</string>
    <string name="str_ci_info">CI+ KEY</string>
    <string name="str_netflix_esn_info">MGKID KEY</string>
    <string name="str_oem_key_info">OEM KEY</string>
    <string name="str_rmca_info">RMCA KEY</string>
    <string name="str_panel_setting">Panel Setting</string>
    <string name="str_sw_info">Sw Info</string>
    <string name="str_max_address">MAC Address</string>
    <string name="str_device_id">Device ID</string>
    <string name="str_hdcp_key1">HDCP KEY1.0</string>
    <string name="str_hdcp_key2">HDCP KEY2.0</string>
    <string name="str_att_key">ATT KEY</string>
    <string name="str_google_sn">Google SN</string>
    <string name="str_pq_version">PQ Version</string>
    <string name="str_aq_version">AQ Version</string>
    <string name="str_sw_version">Sw version</string>
    <string name="str_built_time">Built Time</string>
    <string name="str_tvConfig_version">TvConfig Version</string>
    <string name="str_tv_work_time">Tv Work Time</string>
    <string name="str_default">default</string>
    <string name="str_balance">Balance</string>
    <string name="str_balance_cur">Current Balance</string>
    <string name="str_balance_l">-50</string>
    <string name="str_balance_m">0</string>
    <string name="str_balance_r">50</string>
    <string name="str_volume">Volume</string>
    <string name="str_volume_0">0</string>
    <string name="str_volume_50">50</string>
    <string name="str_volume_100">100</string>
    <string name="str_select_key_map">Key Map</string>
    <string name="str_select_input_source">Input Source</string>
    <string name="str_tv_search">TV Search</string>
    <string name="str_export_channel">Export Channel</string>
    <string name="str_import_channel">Import Channel</string>
    <string name="str_mute_color">Mute Color</string>
    <string name="str_record_all">Record All</string>
</resources>