<?xml version="1.0" encoding="UTF-8"?>
<PreferenceContainer logic="com.realtek.fullfactorymenu.MainLogic">

    <Preference id="@+id/page_sw_info" title="@string/str_sw_info" />

    <Preference id="@+id/page_picture" title="@string/str_picture" />

    <Preference id="@+id/page_sound" title="@string/str_sound" />

    <Preference id="@+id/page_panel" title="@string/str_panel" />

    <Preference id="@+id/page_user" title="@string/str_user" />

    <Preference id="@+id/page_others" title="@string/str_others" visible="false"/>

    <Preference id="@+id/system_info" title="@string/str_system_info"/>

    <Preference id="@+id/reset" title="@string/str_reset" />

    <Preference id="@+id/android_reset" title="@string/str_Android_reset" visible="false"/>


    <StatePreference id="@+id/CustomerPowerOnMode" title="@string/str_CustomerPowerOnMode" cycleEnabled="true" visible="false">
        <entry name="@string/str_on" enabled="true" />
        <entry name="@string/str_off" enabled="true" />
        <entry name="@string/power_memory" enabled="true" />
    </StatePreference>
</PreferenceContainer>