<?xml version="1.0" encoding="utf-8"?>
<PreferenceContainer logic="com.realtek.fullfactorymenu.sound.SoundPageLogic">

    <StatePreference id="@+id/input_source" title="@string/inputsource" cycleEnabled="true" />

    <Preference id="@+id/page_sound_mode" title="@string/str_sound_mode"/>

    <Preference id="@+id/page_sound_adjust" title="@string/str_sound_adjust" />

    <Preference id="@+id/page_volume_curve" title="@string/str_volume_curve"/>

    <StatePreference id="@+id/volume" title="@string/str_volume" cycleEnabled="true">
        <entry name="@string/str_default" index="0" enabled="true" />
        <entry name="@string/str_volume_0" index="1" enabled="true" />
        <entry name="@string/str_volume_50" index="2" enabled="true" />
        <entry name="@string/str_volume_100" index="3" enabled="true" />
    </StatePreference>

    <StatePreference id="@+id/balance" title="@string/str_balance" cycleEnabled="true">
        <entry name="@string/str_balance_l" index="0" enabled="true" />
        <entry name="@string/str_balance_m" index="1" enabled="true" />
        <entry name="@string/str_balance_r" index="2" enabled="true" />
    </StatePreference>

    <SumaryPreference id="@+id/balance_default" title="@string/str_balance_cur" />

    <SeekBarPreference id="@+id/balance_seekbar" title="@string/str_balance" minValue="-50" maxValue="50" visible="false"/>

</PreferenceContainer>